--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
       <div class="container">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">@akshatJagya/Infynite Horizon</a>
+          <a href="https://www.linkedin.com/in/akshat-jagya/">@akshatJagya/Infynite Horizon</a>
         </p>
       </div>
     </section>
