--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                 <h1>The Best Marketing</h1>
                 <p>At Infynite Horizon, we believe in limitless growth and success. Unlock your true potential with our strategic growth solutions.</p>
                 <div class="btn-box">
-                  <a href="#" class="btn-1">Contact Us</a>
-                  <a href="#" class="btn-2">Get A Quote</a>
+                  <a href="#contact" class="btn-1">Contact Us</a>
+                  <a href="#contact" class="btn-2">Get A Quote</a>
                 </div>
               </div>
             </div>
@@ -134,8 +134,8 @@
                 <h1>Unleash Your Potential</h1>
                 <p>Join us on an exhilarating journey of growth and redefine the limits of success. Amplify your brand presence and embrace infinite possibilities.</p>
                 <div class="btn-box">
-                  <a href="#" class="btn-1">Contact Us</a>
-                  <a href="#" class="btn-2">Get A Quote</a>
+                  <a href="#contact" class="btn-1">Contact Us</a>
+                  <a href="#contact" class="btn-2">Get A Quote</a>
                 </div>
               </div>
             </div>
@@ -381,7 +381,7 @@
   <div class="footer_bg">
 
     <!-- contact section -->
-    <section class="contact_section layout_padding" id="contactLink" id="contact">
+    <section class="contact_section layout_padding" id="contact">
       <div class="container">
         <div class="heading_container">
           <h2>
