--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                 <h1>The Power of Growth</h1>
                 <p>Experience exponential growth and expand your business to new horizons with our innovative and tailored strategies.</p>
                 <div class="btn-box">
-                  <a href="#" class="btn-1">Contact Us</a>
-                  <a href="#" class="btn-2">Get A Quote</a>
+                  <a href="#contact" class="btn-1">Contact Us</a>
+                  <a href="#contact" class="btn-2">Get A Quote</a>
                 </div>
               </div>
             </div>
