--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               </ul>
             </div>
             <div class="quote_btn-container ">
-              <a href="">
+              <a href='tel:+918130890345'></a>
                 <img src="images/call.png" alt="">
                 <span>
                   Call :  +91 81308 90345
