--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 col-md-8 mx-auto">
-            <form action="https://formspree.io/f/xayzgayr"
+            <form action="https://formspree.io/f/xrgwzqoz"
             method="POST">
               <div class="form-row">
                 <div class="form-group col-md-6">
